changes' is much more useful than 'misc edits' or 'code cleanup.'
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Remove stray spaces from outputs of applymode, bowmode, petmode, usekeys.
Andreas Kirschbaum 2011-06-25

Remove obsolete type 44 EXPERIENCE.
Nicolas Weeger 2011-06-25

Allow non weapon attacks to have animation suffixes.
Nicolas Weeger 2011-06-25

Redirect Python's stderr and stdout to the Crossfire log.
Uses technique and code from
 http://stackoverflow.com/questions/4307187/how-to-catch-python-stdout-in-c-code
Nicolas Weeger 2011-06-23

Don't open Python script file if cached.
Nicolas Weeger 2011-06-23

Do not crash due to corrupted name/password protocol packets.
Andreas Kirschbaum 2011-06-19

Send golem's hp and maxhp as part of statistics, so client can display that.
Nicolas Weeger 2011-06-12

Give access to jail's information for a region to the plugins.
Nicolas Weeger 2011-06-09

Use a specific field (wc_increase_rate, like skills) for summoning creature's
wc improvement by level.
Nicolas Weeger 2011-06-05

Fix for bug #3309792: Invidious server crash.
Don't try to send animation 0, instead clear FLAG_ANIMATE.
Set a bug face for animation 0, just in case.
Nicolas Weeger 2011-06-01

Correctly update improved weapon's weight in inventory.
Nicolas Weeger 2011-05-29

Ensure account information is stored at creation and character linking.
Nicolas Weeger 2011-05-29

Implement account password change.
Nicolas Weeger 2011-05-23

Tentative fix for bug #3127973: 'detect monster' effect badly positioned.
Nicolas Weeger 2011-05-22

Fix crash with character creation using jxclient.
Nicolas Weeger 2011-05-22

Prevent converters from creating unpaid coins.