@@ -14,6 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Rewrite picture loading logic to not be dependant on picture number
+in the various bmaps and crossfire.x files.
+Nicolas Weeger 2011-06-26
+
 Remove stray spaces from outputs of applymode, bowmode, petmode, usekeys.
 Andreas Kirschbaum 2011-06-25
 
